--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
-            android:theme="@style/AppTheme2"
-            android:label="@string/sign_in">
-
-        </activity>
+        <activity android:name=".RegistraitActivity"></activity>
+        <activity
+            android:name=".TakeNoteActivity"
+            android:label="@string/take_note"
+            android:theme="@style/AppTheme2"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/sign_in"
+            android:theme="@style/AppTheme2" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
