--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.iccet2020">
 
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,21 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".RegistraitActivity" />
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:theme="@style/AppTheme2"
+            android:label="Карта">
+        </activity>
+        <activity android:name=".RegistraitActivity" />
         <activity
             android:name=".TakeNoteActivity"
             android:label="@string/take_note"
             android:theme="@style/AppTheme2" />
-
-        <activity android:name=".SendNotificationPack.TestSendPushNotification"/>
-
+        <activity android:name=".SendNotificationPack.TestSendPushNotification" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/sign_in"
             android:theme="@style/AppTheme2" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,7 +48,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service
             android:name=".SendNotificationPack.MyFirebaseIdService"
             android:enabled="true"
@@ -49,7 +56,6 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
