--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
@@ -17,6 +16,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven{url 'https://mapbox.bintray.com/mapbox'}
     }
 }
 
