--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".DoctorActivity" />
         <activity android:name=".AddShedule" />
         <activity android:name=".RegistraitActivity" />
         <activity android:name=".MenuActivity" />
-
-
         <activity
             android:name=".TakeNoteActivity"
             android:label="@string/take_note"
