--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".ChangesActivity"></activity>
+
         <activity android:name=".DoctorActivity" />
+
         <activity android:name=".AddShedule" />
+
         <activity android:name=".RegistraitActivity" />
 
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme2">
+            android:theme="@style/AppTheme2"></activity>
 
-        </activity>
         <activity android:name=".ForgetPasswordActivity" />
-
 
         <activity android:name=".LoginActivity">
             <intent-filter>
