--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,20 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
 
+    //mapbox
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.0.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.6'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-telemetry:5.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+
+    //google map
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.google.android.libraries.places:places-compat:1.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
+
 
 }
