--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,24 +16,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".ChangesActivity"></activity>
-
+        <activity android:name=".MapActivity">
+        </activity>
+        <activity android:name=".ChangesActivity" />
         <activity android:name=".DoctorActivity" />
-
         <activity android:name=".AddShedule" />
-
         <activity android:name=".RegistraitActivity" />
-
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme2">
-
-        </activity>
-
+            android:theme="@style/AppTheme2" />
         <activity android:name=".ForgetPasswordActivity" />
-
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,6 +36,15 @@
         </activity>
 
         <service android:name=".Services.Service" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBnBwA72FSZcnbwTp9YMedJIjhuOklHUDo" />
+
+        <service
+            android:name=".Services.FetchAddressIntentService"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
