--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".AddShedule"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:parentActivityName=".DoctorActivity"
+            android:theme="@style/AppTheme2">
+        </activity>
         <activity
             android:name=".RegistraitActivity"
             android:screenOrientation="portrait"></activity>
